opengit-infra/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengit
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  rules:
    - host: opengit.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opengit-nginx
                port:
                  number: 80
